<!--
  ~ Copyright (C) 2016 Fynn Merlevede
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <!-- ================================= Intro ACTIVITY ==================================-->
    <string name="check_to_pass">I accept terms and conditions.</string>
    <string name="error_message">Please accept terms and conditions first.</string>
    <string name="launch_intro_activity">Launch intro activity</string>
    <string name="lorem_ipsum">Lorem ipsum \n\ndolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure</string>


    <string name="app_name">TrafficAlarm</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_ringtone">Clock+</string>

    <!-- ================================= EDIT ALARM ACTIVITY ==================================-->
    <string name="delete">Delete</string>
    <string name="title_snoozing_until">Snoozing until %1$s</string>
    <string name="dismiss_now">Dismiss now</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>
    <string name="alarm_set_for">Alarm set for %1$s from now.</string>
    <!-- ======================================================================================= -->

    <!-- ==================================== TOASTS ==================================== -->
    <string name="day_hour_and_minute">1 day, 1 hour, and 1 minute</string>
    <string name="days_hour_and_minute">%1$d days, 1 hour, and 1 minute</string>
    <string name="days_hours_and_minute">%1$d days, %2$d hours, and 1 minute</string>
    <string name="days_hour_and_minutes">%1$d days, 1 hours, and %3$d minutes</string>
    <string name="days_hours_and_minutes">%1$d days, %2$d hours, and %3$d minutes</string>
    <string name="day_hours_and_minute">1 day, %2$d hours, and 1 minute</string>
    <string name="day_hours_and_minutes">1 day, %2$d hours, and %3$d minutes</string>
    <string name="day_hour_and_minutes">1 day, 1 hour, and %3$d minutes</string>
    <string name="day_and_hour">1 day and 1 hour</string>
    <string name="days_and_hour">%1$d days and 1 hour</string>
    <string name="day_and_hours">1 day and %2$d hours</string>
    <string name="days_and_hours">%1$d days and %2$d hours</string>
    <string name="day_and_minute">1 day and 1 minute</string>
    <string name="days_and_minute">%1$d days and 1 minute</string>
    <string name="day_and_minutes">1 day and %3$d minutes</string>
    <string name="days_and_minutes">%1$d days and %3$d minutes</string>
    <string name="hour_and_minute">1 hour and 1 minute</string>
    <string name="hour_and_minutes">1 hour and %3$d minutes</string>
    <string name="hours_and_minute">%2$d hours and 1 minute</string>
    <string name="hours_and_minutes">%2$d hours and %3$d minutes</string>
    <string name="day">1 day</string>
    <string name="days">%1$d days</string>
    <string name="hour">1 hour</string>
    <string name="hours">%2$d hours</string>
    <string name="minute">1 minute</string>
    <string name="minutes">%3$d minutes</string>
    <string name="less_than_one_minute">less than 1 minute</string>

    <string name="abbrev_days_hours_and_minutes">%1$dd %2$dh %3$dm</string>
    <string name="abbrev_days_and_hours">%1$dd %2$dh</string>
    <string name="abbrev_days_and_minutes">%1$dd %3$dm</string>
    <string name="abbrev_hours_and_minutes">%2$dh %3$dm</string>
    <string name="abbrev_days">%1$dd</string>
    <string name="abbrev_hours">%2$dh</string>
    <string name="abbrev_minutes">%3$dm</string>
    <string name="abbrev_less_than_one_minute">&lt;1m</string>

    <string name="upcoming_alarm_dismissed">%1$s alarm dismissed.</string>
    <!-- ======================================================================================= -->

    <!-- ==================================== NOTIFICATIONS ==================================== -->
    <string name="upcoming_alarm">Upcoming alarm</string>
    <string name="alarm">Alarm</string>
    <string name="missed_alarm">Missed alarm</string>
    <!-- ======================================================================================= -->

    <!-- ==================================== MAIN ACTIVITY ==================================== -->
    <string name="snackbar_item_deleted">%1$s deleted</string>
    <string name="snackbar_undo_item_deleted">Undo</string>
    <!-- ======================================================================================= -->

    <string name="title_activity_settings">Settings</string>

    <string name="every_day">Every day</string>

    <string name="left_alt_24hr">:00</string>
    <string name="right_alt_24hr">:30</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="alarm_auto_silenced_text">You missed your alarm.</string>

    <string name="label">Label</string>
    <string name="ringtones">Ringtones</string>

    <string name="empty_alarms_container">No alarms added</string>

    <!-- The notification title to use when there are laps in a stopwatch timing. An example is "Stopwatch - Lap 2". -->

    <!-- https://android.googlesource.com/platform/frameworks/base/+/master/core/res/res/values/strings.xml -->
    <!-- The representation of a time duration when negative. An example is -1:14. This can be used with a countdown timer for example.-->

    <!-- ==================================== ABOUT ACTIVITY =================================== -->
    <string name="about">About</string>
    <!-- ======================================================================================= -->
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="duration">Duration</string>
    <string name="my_location">My location</string>
    <string name="intro">Intro</string>

</resources>
