<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2016 Fynn Merlevede
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<!-- Wrapped in a CardView to simulate elevation of the main view.
  - There will be margins around the card on devices that are pre-Lollipop,
  - and the margin size is proportional to the set cardElevation. As a result, the
  - default item animation when collapsing/expanding the ViewHolder shows the views
  - that are common to both VHs (primarily the time text and the on-off switch)
  - shifting slightly during the transition. We are neglecting this blight because
  - we don't expect many devices below Lollipop using our app.
  --><!-- TODO: Write a layout for v21 that instead uses the elevation attribute normally.
  - You may have to set a non-transparent background on the main view.
  - Alternatively, just keep the CardView because that takes care of the non-transparent
  - background issue for free.
  -->
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/cardview_margin"
    android:layout_marginTop="@dimen/cardview_margin"
    android:clickable="true"
    android:foreground="?selectableItemBackground"
    app:cardBackgroundColor="?cardBackgroundColor"
    app:cardCornerRadius="0dp"
    app:cardElevation="@dimen/expanded_alarm_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/item_padding_end"
            android:paddingStart="@dimen/item_padding_start"
            android:paddingTop="@dimen/item_padding_top">

            <include layout="@layout/alarm_time_layout" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/day0"
                    style="@style/AlarmDayToggle" />

                <ToggleButton
                    android:id="@+id/day1"
                    style="@style/AlarmDayToggle" />

                <ToggleButton
                    android:id="@+id/day2"
                    style="@style/AlarmDayToggle" />

                <ToggleButton
                    android:id="@+id/day3"
                    style="@style/AlarmDayToggle" />

                <ToggleButton
                    android:id="@+id/day4"
                    style="@style/AlarmDayToggle" />

                <ToggleButton
                    android:id="@+id/day5"
                    style="@style/AlarmDayToggle" />

                <ToggleButton
                    android:id="@+id/day6"
                    style="@style/AlarmDayToggle" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_margin_between_elements">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_from_to_separator"
                    android:layout_centerVertical="true"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/from"
                        style="@style/BaseLabel"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/label_height"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawablePadding="@dimen/text_compound_drawable_padding"
                        android:drawableStart="@drawable/ic_map_marker_circle"
                        android:gravity="center_vertical"
                        android:hint="@string/from" />

                    <TextView
                        android:id="@+id/to"
                        style="@style/BaseLabel"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/label_height"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawablePadding="@dimen/text_compound_drawable_padding"
                        android:drawableStart="@drawable/ic_map_marker"
                        android:gravity="center_vertical"
                        android:hint="@string/to" />

                    <TextView
                        android:id="@+id/duration"
                        style="@style/BaseLabel"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/label_height"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawablePadding="@dimen/text_compound_drawable_padding"
                        android:gravity="center_vertical"
                        android:hint="@string/duration" />

                </LinearLayout>
            </RelativeLayout>


            <TextView
                android:id="@+id/label"
                style="@style/BaseLabel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/label_height"
                android:layout_marginBottom="@dimen/item_margin_between_elements"
                android:background="?android:attr/selectableItemBackground"
                android:drawablePadding="@dimen/text_compound_drawable_padding"
                android:drawableStart="@drawable/ic_label"
                android:gravity="center_vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_margin_between_elements"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/ringtone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawablePadding="@dimen/text_compound_drawable_padding"
                    android:drawableStart="@drawable/ic_ringtone_24dp"
                    android:gravity="center_vertical"
                    android:text="Ringtone"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="@dimen/text_size_medium" />

                <com.haayhappen.clockplus.alarms.ui.TempCheckableImageButton
                    android:id="@+id/vibrate"
                    style="@style/AlarmVibrateToggle" />

            </LinearLayout>

            <Button
                android:id="@+id/dismiss"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_margin_between_elements"
                android:drawablePadding="@dimen/text_compound_drawable_padding"
                android:paddingEnd="@dimen/button_text_right_padding"
                android:text="@string/dismiss_now" />

        </LinearLayout>

        <View style="@style/Divider.Horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete" />

            <Button
                android:id="@+id/ok"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/ok" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>